Added further minor data checks to Code